# magicDrafter

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  main.rs
