[package]
name = "magic_drafter"
version = "0.1.0"
authors = ["timjk <timfjk@xero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
reqwest = "~0.9"
serde = "~1.0"
regex = "1"
fuzzy-matcher = "*"

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]